# logos-liblogos

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  flake.nix  interface.h  plan.md
.github/workflows/: appimage.yml  ci.yml  doctests.yml
app/: command_line_parser.cpp  command_line_parser.h  main.cpp
configs/: waku_config.json
docs/: project.md  spec.md  specs.md
doctests/: liblogos-module-runtime.test.yaml  run.sh
doctests/outputs/: liblogos-module-runtime.md
examples/: Makefile  README.md  cli.c  cli.cpp
main/: index.html
main/macos-latest/: index.html
main/ubuntu-latest/: index.html
nix/: bin.nix  boost-process-v2-impl.nix  build.nix  default.nix  include.nix  lib.nix  modules.nix  tests.nix
pr-134/: index.html
pr-134/macos-latest/: index.html
pr-134/ubuntu-latest/: index.html
pr-136/: index.html
pr-136/macos-latest/: index.html
pr-136/ubuntu-latest/: index.html
pr-137/: index.html
pr-137/macos-latest/: index.html
pr-137/ubuntu-latest/: index.html
pr-138/: index.html
pr-138/macos-latest/: index.html
pr-138/ubuntu-latest/: index.html
pr-139/: index.html
pr-139/macos-latest/: index.html
pr-139/ubuntu-latest/: index.html
pr-140/: index.html
pr-140/macos-latest/: index.html
pr-140/ubuntu-latest/: index.html
pr-141/: index.html
pr-141/macos-latest/: index.html
pr-141/ubuntu-latest/: index.html
pr-142/: index.html
pr-142/macos-latest/: index.html
pr-142/ubuntu-latest/: index.html
pr-143/: index.html
pr-143/macos-latest/: index.html
pr-143/ubuntu-latest/: index.html
pr-144/: index.html
pr-144/macos-latest/: index.html
pr-144/ubuntu-latest/: index.html
pr-145/: index.html
pr-145/macos-latest/: index.html
pr-145/ubuntu-latest/: index.html
pr-146/: index.html
pr-146/macos-latest/: index.html
pr-146/ubuntu-latest/: index.html
pr-147/: index.html
pr-147/macos-latest/: index.html
pr-147/ubuntu-latest/: index.html
scripts/: build-ios.sh  compile.sh  run.sh
src/: CMakeLists.txt  logos_core.cpp  logos_core.h  logos_host.cpp  path_safety.h
src/common/: interface.h
src/containers/sandbox/: sandbox_container.cpp  sandbox_container.h
src/containers/subprocess/: peer_credentials.h  subprocess_container.cpp  subprocess_container.h  subprocess_manager.h  token_receiver.cpp  token_receiver.h  unix_socket_path.h
src/core_manager/: core_manager.cpp  core_manager.h  core_manager_interface.h
src/logos_core/: access_policy.cpp  access_policy.h  app_lifecycle.cpp  app_lifecycle.h  composite_runtime.cpp  composite_runtime.h  core_context.cpp  dependency_resolver.cpp  dependency_resolver.h  global_state.cpp  logos_core.cpp  logos_core.h  logos_core_internal.h  module_container.h  module_loader.h  module_manager.cpp  module_manager.h  module_name_validation.h  module_registry.cpp  module_registry.h  module_runtime.h  plugin_launcher.cpp  plugin_launcher.h  plugin_loader.cpp  plugin_loader.h  plugin_manager.cpp  plugin_manager.h  plugin_registry.cpp  plugin_registry.h  process_manager.cpp  process_manager.h  process_stats.cpp  process_stats.h  protocol_gate.h  proxy_api.cpp  proxy_api.h  runtime_registry.cpp  runtime_registry.h
src/logos_core/core_manager/: core_manager.cpp  core_manager.h  core_manager_interface.h
src/logos_core/platform/: app_context.cpp  app_context.h  executable_path.cpp  executable_path.h  ipc_paths.h  logos_logging.h  logos_uuid.h  process_manager.cpp  process_manager.h
src/logos_core/qt/: qt_app_context.cpp  qt_app_context.h  qt_process_manager.cpp  qt_process_manager.h
src/logos_host/: command_line_parser.cpp  command_line_parser.h  logos_host.cpp  plugin_initializer.cpp  plugin_initializer.h
src/logos_host/platform/: token_receiver.cpp  token_receiver.h
src/logos_host/qt/: host_app.cpp  host_app.h  qt_token_receiver.cpp  qt_token_receiver.h
src/logos_host_wasm/: logos_host_wasm.cpp  wasm_provider_object.cpp  wasm_provider_object.h
src/runtimes/qt_subprocess/: qt_subprocess_runtime.cpp  qt_subprocess_runtime.h  subprocess_manager.cpp  subprocess_manager.h
src/runtimes/qt_subprocess/host/: plugin_initializer.cpp
src/runtimes/runtime_qt/: command_line_parser.cpp  command_line_parser.h  logos_host.cpp  module_initializer.cpp  module_initializer.h  plugin_initializer.cpp  qt_plugin_runtime.cpp  qt_plugin_runtime.h  subprocess_manager.cpp  subprocess_manager.h
src/runtimes/runtime_qt/host/: command_line_parser.h  logos_host.cpp  module_initializer.cpp
src/runtimes/runtime_qt/qt/: qt_token_receiver.cpp  qt_token_receiver.h
tests/: CMakeLists.txt  qt_test_adapter.h  test_access_policy.cpp  test_app_lifecycle.cpp  test_cli.cpp  test_composite_runtime.cpp  test_dependency_resolver.cpp  test_module_manager.cpp  test_module_name_validation.cpp  test_module_runtime_abstraction.cpp  test_plugin_manager.cpp  test_process_manager.cpp  test_process_stats.cpp  test_protocol_gate.cpp  test_proxy_api.cpp  test_qt_plugin_runtime.cpp  test_runtime_registry.cpp  test_sandbox_container.cpp  test_subprocess_container.cpp  test_subprocess_manager.cpp  test_token_exchange.cpp
